LPS-143181 Insurance-faq fragment alignment correction

--- a/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/insurance-faq/index.css
+++ b/modules/apps/site-initializer/site-initializer-raylife/src/main/zippableResources/fragments/raylife/fragments/insurance-faq/index.css
@@ -1,5 +1,5 @@
-.insurance-faq .main-div {
-	width:50.5rem;
+.insurance-faq .content-div {
+	width: 50.5rem;
 }
 
 .insurance-faq p {
